<resources>
    <string name="app_name">小萌伴</string>
    <string name="mengmeng">萌萌</string>
    <string name="title_home">伴侣</string>
    <string name="title_circle">萌段子</string>
    <string name="title_findphone"></string>
    <string name="title_more">百宝箱</string>
    <string name="title_mine">我的</string>
    <string name="loading">加载中...</string>
    <string name="loading_up_load_more">上拉加载更多...</string>
    <string name="loading_no_more">没有更多</string>
    <string name="loading_no_more_comment">没有更多评论</string>
    <string name="loading_no_push_msg">暂无消息</string>
    <string name="item_robot_add">更多萌伴</string>
    <string name="app_exit">再按一次退出小萌伴</string>
    <string name="title_add_robot">添加萌伴</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tuling_exception">我有点头晕，暂时回答不了您的问题，试试登录吧</string>
    <string name="chat_input_edit_hint">想聊点啥呢...</string>
    <string name="history_message_nomore">没有更多历史消息</string>
    <string name="net_no">网络不给力哦o(╥﹏╥)o</string>
    <string name="joke_happy">开心一刻</string>
    <string name="joke_happy_pic">萌伴趣图</string>
    <string name="joke_parse_error">不开心，不想说笑话了，陪我聊聊其它的o(╥﹏╥)o</string>
    <string name="joke_rand_parse_error">不开心，找不到趣图了，陪我聊聊其它的o(╥﹏╥)o</string>
    <string name="mengmeng_welcome">闲暇时光，有我陪你！</string>
    <string name="add_robot_icon">头像</string>
    <string name="add_robot_name">昵称</string>
    <string name="add_robot_sex">性别</string>
    <string name="add_robot_welcome">签名</string>
    <string name="add_robot_voice_tb">仅Wifi下使用在线声音</string>
    <string name="add_robot_voice">在线声音</string>
    <string name="add_robot_bg">背景</string>
    <string name="add_robot_bg_blur">背景模糊</string>
    <string name="add">添加</string>
    <string name="more_news">小萌伴</string>
    <string name="more_history">历史今日</string>
    <string name="more_game">小游戏</string>
    <string name="more_light">手电筒</string>
    <string name="more_findphone">找手机</string>
    <string name="more_taobao">购物街</string>
    <string name="more_news_center">资讯中心</string>
    <string name="more_game_center">娱乐中心</string>
    <string name="more_app_center">应用中心</string>
    <string name="add_robot_name_empty">昵称不能为空</string>
    <string name="add_robot_title_robot">萌伴</string>
    <string name="title_info">个人信息</string>
    <string name="save">保存</string>
    <string name="input_is_empty">输入内容不能为空</string>
    <string name="sex_male">男</string>
    <string name="sex_female">女</string>
    <string name="sex_unknow">保密</string>
    <string name="voice_female">女声</string>
    <string name="voice_male">男声</string>
    <string name="voice_male1">特别男声</string>
    <string name="voice_male2">情感男声</string>
    <string name="voice_children">童声</string>
    <string name="input_name_hint">为您的萌伴取个名吧</string>
    <string name="input_welcome_hint">萌伴希望有一条帅气的个性签名哦</string>
    <string name="sex_hint">是男是女？不会是中性吧^_^</string>
    <string name="voice_hint">希望萌伴的声音是什么样子呢?(仅Wifi下有效)</string>
    <string name="input_error">"萌萌"已经存在，换个更有爱的名字吧^_^</string>
    <string name="mine_login_hint">注册/登录</string>
    <string name="mine_page">个人空间</string>
    <string name="mine_msg">消息中心</string>
    <string name="mine_collect">我的收藏</string>
    <string name="mine_set">个性设置</string>
    <string name="mine_share">邀请好友</string>
    <string name="mine_about">关于我们</string>
    <string name="gamelist">【小萌伴】游戏中心</string>
    <string name="gamelist_game2048">2048</string>
    <string name="gamelist_game2048_content">你能合成2048吗</string>
    <string name="gamelist_killbird">防御小鸟</string>
    <string name="gamelist_killbird_content">同样的小鸟，不一样的玩法</string>
    <string name="gamelist_plane">飞机大战</string>
    <string name="gamelist_plane_content">一起来打飞机吧</string>
    <string name="gamelist_more">更多游戏</string>
    <string name="game2048">【小萌伴】游戏：2048</string>
    <string name="game_2048_score">分数：  </string>
    <string name="game_2048_change_column">切换为%1$dx%2$d方格</string>
    <string name="game_exit">再按一次退出游戏</string>
    <string name="game_start">开始游戏</string>
    <string name="game_share_text">我在【小萌伴】游戏中心玩%1$s，当前分：%2$s,求挑战，求超越！</string>
    <string name="game_no_need_net">本地游戏，不需流量</string>
    <string name="game_h5_wucaiguodong">五彩果冻大相连</string>
    <string name="game_h5_wucaiguodong_content">移动果冻，使同颜色果冻相连</string>
    <string name="game_h5_wucaiguodong_share">快来【小萌伴】玩果冻相连</string>
    <string name="game_h5_wucaiguodong_share_content">我在【小萌伴】体验好玩的五彩果冻游戏</string>
    <string name="game_h5_guoshanche">惊险过山车</string>
    <string name="game_h5_guoshanche_content">合理操作，体验惊险刺激的过山车吧</string>
    <string name="game_h5_guoshanche_share">我在【小萌伴】玩过山车</string>
    <string name="game_h5_guoshanche_share_content">快来【小萌伴】体验惊险刺激的过山车吧</string>
    <string name="game_h5_zhaoyaojing">照妖镜</string>
    <string name="game_h5_zhaoyaojing_content">你前世是什么妖</string>
    <string name="game_h5_zhaoyaojing_share">我在【小萌伴】玩照妖镜</string>
    <string name="game_h5_zhaoyaojing_share_content">让【小萌伴】告诉你前世是什么妖</string>
    <string name="game_h5_zaqiche">土豪砸汽车</string>
    <string name="game_h5_zaqiche_content">合理操作，尽情泄愤，摧毁名车</string>
    <string name="game_h5_zaqiche_share">土豪，快来【小萌伴】砸汽车</string>
    <string name="game_h5_zaqiche_share_content">快来【小萌伴】，合理操作，尽情泄愤，摧毁名车，土豪快感</string>
    <string name="game_h5_kengdie">史上最坑爹的游戏</string>
    <string name="game_h5_kengdie_content">脑洞大开，解开关卡成功闯关。</string>
    <string name="game_h5_kengdie_share">史上最坑爹的游戏</string>
    <string name="game_h5_kengdie_share_content">快来【小萌伴】，和我一起闯关</string>
    <string name="game_h5_baikuai">别踩白块儿</string>
    <string name="game_h5_baikuai_content">脑洞大开，解开关卡成功闯关。</string>
    <string name="game_h5_baikuai_share">别再踩白块儿</string>
    <string name="game_h5_baikuai_share_content">快来【小萌伴】，和我一起挑战极限</string>
    <string name="game_h5_chazhen">见缝插箭</string>
    <string name="game_h5_chazhen_content">您能插多少？</string>
    <string name="game_h5_chazhen_share">见缝插箭</string>
    <string name="game_h5_chazhen_share_content">快来【小萌伴】，和我一起挑战极限</string>
    <string name="game_h5_motuo">超极限摩托车</string>
    <string name="game_h5_motuo_content">控制越野摩托车翻越重重障碍获取高分</string>
    <string name="game_h5_motuo_share">超极限摩托车</string>
    <string name="game_h5_motuo_share_content">我在【小萌伴】玩极限摩托，谁来跟我一起挑战极限</string>
    <string name="game_h5_water">智力水滴</string>
    <string name="game_h5_water_content">一款老少皆益的连线类智力游戏</string>
    <string name="game_h5_water_share">智力水滴</string>
    <string name="game_h5_water_share_content">我在【小萌伴】玩智力水滴，谁来挑战</string>
    <string name="open_news_failed">进入新闻详情失败,该条新闻可能已经被删除。。。</string>
    <string name="open_history_details_failed">进入详情失败,请稍后重试。。。</string>
    <string name="today_history">历史上的今天</string>
    <string name="details">详情</string>
    <string name="progress_ing">查询中...</string>
    <string name="save_success">保存成功</string>
    <string name="save_to_phone">保存到手机</string>
    <string name="cancel">取消</string>
    <string name="save_pictrue_hint">将图片…</string>
    <string name="news_from">来源：</string>
    <string name="detail_no_content">您没有收藏</string>
    <string name="favorites_fai">收藏失败</string>
    <string name="favorites_suc">收藏成功</string>
    <string name="favorite_time_hint">收藏于：</string>
    <string name="flashlight">手电筒</string>
    <string name="flashlight_set">手电筒设置</string>
    <string name="flashlight_open_error">Camera异常，不能为您打开手电筒,请检查是否禁止了【小萌伴】的相机权限</string>
    <string name="flashlight_no">您的手机不支持手电筒</string>
    <string name="notification_text">点击关闭手电筒</string>
    <string name="dialog_notify_hint_title">小萌伴</string>
    <string name="dialog_notify_hint">是否前往打开通知权限，以便正常查看操作提示!</string>
    <string name="goto_open">前往打开</string>
    <string name="goto_ignore">忽略</string>
    <string name="dialog_camera_hint">您禁止了相机权限，将导致手电筒功能不能使用</string>
    <string name="dialog_camera_hint_title">提示</string>
    <string name="dialog_shot_cut_hint">您禁止了创建快捷图标权限，无法为你创建手电筒桌面快捷图标</string>
    <string name="dialog_shot_cut_hint_title">提示</string>
    <string name="dialog_voice_hint">您禁止了语音权限，将无法使用语音功能</string>
    <string name="dialog_voice_hint2">您禁止了语音权限，将无法使用语音找手机功能</string>
    <string name="dialog_voice_hint_title">提示</string>
    <string name="dialog_sms_hint">您禁止了短信权限，将无法使用短信找手机功能</string>
    <string name="dialog_sms_hint_title">提示</string>
    <string name="dialog_latlng_hint">您禁止了短信或定位权限，将无法保证找手机功能正常运行</string>
    <string name="dialog_latlng_hint_title">提示</string>
    <string name="dialog_file_hint">您禁止了文件读写权限，将会影响聊天记录及语音功能的正常使用</string>
    <string name="dialog_file_hint_title">提示</string>
    <string name="dialog_location_hint">您禁止了定位权限，将无法获取您的当前位置</string>
    <string name="dialog_install_hint_title">提示</string>
    <string name="dialog_install_hint">您禁止了应用安装/更新权限，您将无法更新到最新版本</string>
    <string name="dialog_location_hint_title">提示</string>
    <string name="chat_voice_tv">按住 说话</string>
    <string name="chat_voice_tv_end">松开 发送</string>
    <string name="chat_voice_tv_cancel">松开 取消发送</string>
    <string name="input_voice_toast_start">按住开始说话</string>
    <string name="input_voice_hint_net_no">当前网络不给力，你仅可以使用离线语音(仅能识别：打开手电筒，关闭手电筒，打开游戏，打开电灯，关闭电灯，说个笑话，小萌小萌)</string>
    <string name="input_voice_toast_move_out">语音已取消</string>
    <string name="input_voice_toast_time_short">这么快就说完了，我还没听到</string>
    <string name="input_voice_toast_time_long">您说的太多，我理解不了</string>
    <string name="input_voice_toast_end">语音已收到，马上回答</string>
    <string name="sr_error_network_timeout">网络不给力哦！</string>
    <string name="sr_error_network">网络不给力哦</string>
    <string name="sr_error_audio">您说了啥？没听明白</string>
    <string name="sr_error_server">服务器出故障了，我需要休息一下</string>
    <string name="sr_error_client">出故障了，您可以反馈给开发者</string>
    <string name="sr_error_speech_timeout">您说的有点多，我听不太懂</string>
    <string name="sr_error_no_match">您说了啥？没听太清楚</string>
    <string name="sr_error_recognizer_busy">忙着呢，有什么稍后告诉我</string>
    <string name="sr_error_insufficient_permissions">权限</string>
    <string name="findphone_sms">短信找手机（声音）</string>
    <string name="findphone_sms_set">设置短信指令</string>
    <string name="findphone_sms_update">修改短信指令</string>
    <string name="findphone_latlng">短信找手机（位置）</string>
    <string name="findphone_latlng_set">设置短信指令</string>
    <string name="findphone_latlng_update">修改短信指令</string>
    <string name="findphone_voice">语音找手机</string>
    <string name="findphone_voice_update">修改语音指令</string>
    <string name="set_find_phone_voice_edit_hint">请输入3-5个中文汉字</string>
    <string name="set_find_phone_voice_text_hint">提示：语音找手机请设置3-5位中文汉字语音指令（默认小萌小萌）\n\n备注：打开"语音找手机"功能后，在手机锁屏或黑屏时，可以呼唤语音指令（默认“小萌小萌”），萌萌会语音回复“主人，我在这里”，您即可根据声音来源找到手机，也可大喊“打开手电筒”，萌萌会发光哦！\n该功能需要您允许应用后台运行，并打开语音权限\n　　更实用便捷的找手机方式正在研发中...</string>
    <string name="toast_set_find_phone_voice_length">请设置3-5位语音指令</string>
    <string name="toast_set_find_phone_voice_error">语音指令仅支持纯中文汉字</string>
    <string name="toast_set_find_phone_voice_error2">为了保证成功找到手机，请不要设置为同一个字符</string>
    <string name="set_find_phone_sms_edit_hint">请输入找手机短信指令（手机接收到该指令会响铃）</string>
    <string name="qr_code_hint">扫一扫， 下载体验</string>
    <string name="qr_code_share_hint">单击二维码分享</string>
    <string name="circle_hot">热门</string>
    <string name="circle_plate">话题</string>
    <string name="circle_topic">主题</string>
    <string name="login">登录</string>
    <string name="login_input_user_hint">请输入账号...</string>
    <string name="login_input_pwd_hint">请输入密码...</string>
    <string name="login_input_pwd_two_hint">请再次输入密码...</string>
    <string name="login_forget_pwd">忘记密码</string>
    <string name="login_register">新用户，前往注册</string>
    <string name="register">注册</string>
    <string name="register_name_hint">账号(邮箱):</string>
    <string name="register_pwd_hint">密码(6-18位):</string>
    <string name="register_pwd_two_hint">密码确认:</string>
    <string name="home_top_btn_joke">看段子</string>
    <string name="home_top_btn_game">小游戏</string>
    <string name="home_top_btn_findphone">找手机</string>
    <string name="home_top_btn_flashlight">手电筒</string>
</resources>