<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/item_robot_headerlayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/space"
    android:padding="@dimen/space_2x">

    <TextView
        android:id="@+id/item_robot_header0"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:text="@string/home_top_btn_joke"
        android:textColor="@color/text"
        android:textSize="@dimen/size_xl"
        android:drawablePadding="@dimen/space"
        android:drawableTop="@mipmap/home_top_btn_joke"
        android:paddingLeft="@dimen/space_4x"
        android:paddingRight="@dimen/space_4x"/>
    <TextView
        android:id="@+id/item_robot_header1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:text="@string/home_top_btn_game"
        android:textColor="@color/text"
        android:textSize="@dimen/size_xl"
        android:drawablePadding="@dimen/space"
        android:drawableTop="@mipmap/home_top_btn_game"
        android:paddingLeft="@dimen/space_4x"
        android:paddingRight="@dimen/space_4x"/>
    <TextView
        android:id="@+id/item_robot_header2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:text="@string/home_top_btn_findphone"
        android:textColor="@color/text"
        android:textSize="@dimen/size_xl"
        android:drawablePadding="@dimen/space"
        android:drawableTop="@mipmap/home_top_btn_findphone"
        android:paddingLeft="@dimen/space_4x"
        android:paddingRight="@dimen/space_4x"/>
    <TextView
        android:id="@+id/item_robot_header3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:text="@string/home_top_btn_flashlight"
        android:textColor="@color/text"
        android:textSize="@dimen/size_xl"
        android:drawablePadding="@dimen/space"
        android:drawableTop="@mipmap/home_top_btn_flashlight"
        android:paddingLeft="@dimen/space_4x"
        android:paddingRight="@dimen/space_4x"/>

</LinearLayout>