<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/rounded_corners_tag_white"
        android:focusable="false"
        android:orientation="vertical">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_5x"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/text"
            android:textSize="@dimen/size_xl" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space"
            android:gravity="center"
            android:text="@string/qr_code_hint"
            android:textColor="@color/text"
            android:textSize="@dimen/size_s" />

        <ImageView
            android:id="@+id/qrcode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/space_3x"
            android:background="@mipmap/e7_qrcode_360"
            android:gravity="center" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/space_2x"
            android:gravity="center"
            android:text="@string/qr_code_share_hint"
            android:textColor="@color/text"
            android:textSize="@dimen/size_s" />
    </LinearLayout>

</FrameLayout>