<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.e7yoo.e7.fragment.CircleFragment">

    <LinearLayout
        android:id="@+id/circle_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:padding="@dimen/space_3x">

        <TextView
            android:id="@+id/circle_topic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_corners_circle_text"
            android:gravity="center"
            android:padding="@dimen/space_2x"
            android:text="@string/circle_topic"
            android:textColor="@color/circle_text_selector"
            android:textSize="@dimen/size_l" />

        <TextView
            android:id="@+id/circle_hot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/space_4x"
            android:background="@drawable/rounded_corners_circle_text"
            android:gravity="center"
            android:padding="@dimen/space_2x"
            android:text="@string/circle_hot"
            android:textColor="@color/circle_text_selector"
            android:textSize="@dimen/size_l" />

        <TextView
            android:id="@+id/circle_plate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/space_4x"
            android:background="@drawable/rounded_corners_circle_text"
            android:gravity="center"
            android:padding="@dimen/space_2x"
            android:text="@string/circle_plate"
            android:textColor="@color/circle_text_selector"
            android:textSize="@dimen/size_l" />
    </LinearLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/circle_viewpager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/circle_top"/>

</RelativeLayout>
